--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "ghasedak/laravel": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
+        "kavenegar/laravel": "^1.3",
+        "kavenegar/php": "^1.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7"
